# aegis

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.aegis/: FAILURES.jsonl  LESSONS.jsonl  MEMORY.md  metrics.json
.aegis/SKILLS/: nightly-dream.md  qa.md
.aegis/automations/: nightly-dream.toml  wiki-refresh.toml
.aegis/dreams/: 2026-07-12_040118.json  2026-07-12_040118.md
.aegis/factory/: status.json
.aegis/nexus/: capability-map.json  neural-summary.json
.aegis/qa/reports/: 20260712_040011.md
.aegis/readiness/: report.json
.aegis/skills/qa/: REPORT-TEMPLATE.md  SKILL.md  config.yaml
.aegis/skills/qa-cli/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: aegis-qa.yml  ci.yml  publish-wiki.yml  release.yml
crates/aegis/: Cargo.toml
crates/aegis-auth/: Cargo.toml
crates/aegis-auth/src/: device.rs  file.rs  lib.rs  provider.rs  refresh.rs
crates/aegis-context/: Cargo.toml
crates/aegis-context/src/: lib.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: agent.rs  automations.rs  checkpoint.rs  config.rs  dream.rs  factory.rs  hooks.rs  learn.rs  lib.rs  mission.rs  missions_cmd.rs  notify.rs  prompts.rs  qa.rs  readiness_v2.rs  review.rs  ui.rs  wiki.rs
crates/aegis-evolution/: Cargo.toml
crates/aegis-evolution/src/: lib.rs
crates/aegis-hardware/: Cargo.toml
crates/aegis-hardware/src/: lib.rs
crates/aegis-mcp/: Cargo.toml
crates/aegis-mcp/src/: lib.rs
crates/aegis-memory/: Cargo.toml
crates/aegis-memory/src/: failures.rs  failures_tests_extra.rs  inject.rs  lessons.rs  lib.rs  nexus.rs  project.rs  redact.rs  reflect.rs
crates/aegis-spore/: Cargo.toml
crates/aegis-spore/src/: lib.rs
crates/aegis-store/: Cargo.toml
crates/aegis-store/src/: db.rs  lib.rs  paths.rs
crates/aegis-swarm/: Cargo.toml
crates/aegis-swarm/src/: dag.rs  lib.rs  missions.rs  scheduler.rs
crates/aegis-tools/: Cargo.toml
crates/aegis-tools/src/: ask.rs  bash.rs  edit.rs  fs_tools.rs  git_tools.rs  grep.rs  lib.rs  memory_tools.rs  registry.rs  search.rs  todo.rs  vision.rs  web.rs
crates/aegis-xai/: Cargo.toml
crates/aegis-xai/src/: client.rs  lib.rs  token.rs  types.rs
crates/aegis/src/: main.rs
docs/: RELEASE.md  architecture.md  audit-2026-07-12.md  auth.md  automations.md  dream.md  factory.md  features.md  learning.md  missions.md  nexus.md  qa.md  readiness.md  review.md  stress-report.md  stress.md  wiki.md  xai-capabilities.md
docs/wiki/: Architecture.md  Commands.md  Conventions.md  Home.md  Modules.md  README.md  _Sidebar.md
examples/toy-project/: Cargo.toml
examples/toy-project/src/: lib.rs
scripts/: live_smoke.sh  publish_wiki.sh  reflect_smoke.sh  spore_pack.sh  stress_test.sh
