[workspace]
resolver = "2"
members = [
    "crates/aegis",
    "crates/aegis-auth",
    "crates/aegis-core",
    "crates/aegis-xai",
    "crates/aegis-tools",
    "crates/aegis-swarm",
    "crates/aegis-store",
    "crates/aegis-context",
    "crates/aegis-memory",
    "crates/aegis-mcp",
    "crates/aegis-evolution",
    "crates/aegis-spore",
    "crates/aegis-hardware",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Dennis"]
repository = "https://github.com/denster32/aegis"
description = "Sovereign Grok-native coding agent in Rust"

[workspace.dependencies]
aegis-auth = { path = "crates/aegis-auth" }
aegis-core = { path = "crates/aegis-core" }
aegis-xai = { path = "crates/aegis-xai" }
aegis-tools = { path = "crates/aegis-tools" }
aegis-swarm = { path = "crates/aegis-swarm" }
aegis-store = { path = "crates/aegis-store" }
aegis-context = { path = "crates/aegis-context" }
aegis-memory = { path = "crates/aegis-memory" }
aegis-mcp = { path = "crates/aegis-mcp" }
aegis-evolution = { path = "crates/aegis-evolution" }
aegis-spore = { path = "crates/aegis-spore" }
aegis-hardware = { path = "crates/aegis-hardware" }

anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
futures = "0.3"
ignore = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
hex = "0.4"
parking_lot = "0.12"
indicatif = "0.17"
console = "0.15"
eventsource-stream = "0.2"
bytes = "1"
tempfile = "3"
