[package]
name = "aegis-auth"
version.workspace = true
edition.workspace = true
description = "Grok OAuth / OIDC credential provider for Aegis"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
directories.workspace = true
fs2 = "0.4"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
