[package]
name = "aegis-context"
version.workspace = true
edition.workspace = true

[dependencies]
aegis-memory.workspace = true
anyhow.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
