[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true

[dependencies]
aegis-context.workspace = true
aegis-memory.workspace = true
aegis-store.workspace = true
aegis-swarm.workspace = true
aegis-tools.workspace = true
aegis-xai.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
console.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
