[package]
name = "aegis-evolution"
version.workspace = true
edition.workspace = true
description = "Nexus evolution: genes, mutations, fitness scoring, and proposal engine"

[dependencies]
aegis-xai.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
