[package]
name = "aegis-hardware"
version.workspace = true
edition.workspace = true
description = "Aegis Nexus hardware symbiosis: host probe and throttle policy"
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
