[package]
name = "aegis-mcp"
version.workspace = true
edition.workspace = true
description = "Minimal MCP stdio client for Aegis tools"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aegis-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
