[package]
name = "aegis-spore"
version.workspace = true
edition.workspace = true
description = "Aegis Nexus viral spore protocol — pack/unpack redacted project learning"

[dependencies]
aegis-memory.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
