[package]
name = "aegis-tools"
version.workspace = true
edition.workspace = true

[dependencies]
aegis-memory.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
chrono.workspace = true
ignore.workspace = true
parking_lot.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2"
uuid.workspace = true
walkdir.workspace = true
